--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,10 @@ project:
 website:
   title: "Experimental blog posts"
   description: "Machine Learning Paper Summaries and Notes"
+  sidebar:
+    style: "floating"
+    search: true
+    contents: sidebar.yml
   navbar:
     left:
       - href: index.qmd
